# geany-bottom-term

./: README.md  meson.build
src/: colors.c  colors.h  plugin.c  plugin.h  reparent.c  reparent.h  tab_manager.c  tab_manager.h  terminal.c  terminal.h  tmux.c  tmux.h
